--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,6 +23,7 @@ requirements:
 
   run:
     - python >=3.7
+    - packaging >=20.0
     - cloudpickle >=1.1.1
     - fsspec >=0.6.0
     - partd >=0.3.10
