--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,16 +1,19 @@
-{% set version = "2022.5.0" %}
+{% set name = "dask-core" %}
+{% set version = "2022.7.0" %}
+{% set checksum = "50ad63035d6429cfa71d4c1832888a668e4260b1ef11163c795edc0ed177b4b3" %}
+{% set build_number = "0" %}
 
 package:
-  name: dask-core
+  name: {{ name }}
   version: {{ version }}
 
 source:
   fn: dask-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/d/dask/dask-{{ version }}.tar.gz
-  sha256: 0afd69dd0cd9f838fc0710eda1f3e3333d6603b37e93ded7fac4a51d77566a0f
+  sha256: {{ checksum }}
 
 build:
-  number: 0
+  number: {{ build_number }}
   script: {{ PYTHON }} -m pip install . --no-deps -vv
   skip: true  # [py<38]
 
