--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "dask-core" %}
-{% set version = "2023.6.0" %}
+{% set version = "2023.11.0" %}
 
 package:
   name: {{ name }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/d/dask/dask-{{ version }}.tar.gz
-  sha256: 980741966ef4d14c62dfb146f315f57d5eaaa6bedc52866f99687bc6054c2d4b
+  sha256: 06b8f39755d37ff6ef4db422774db1f1d5d6788d33f0628c80861dc6452f878c
   entry_points:
     - dask = dask.__main__:main
 
@@ -25,11 +25,11 @@ requirements:
     - pip
     - setuptools
     - wheel
-    - versioneer 0.28
-    - tomli 2.0.1
+    - versioneer
+    - tomli
   run:
     - python
-    - click >=8.0
+    - click >=8.1
     - cloudpickle >=1.5.0
     - fsspec >=2021.09.0
     - packaging >=20.0
