--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,13 +1,13 @@
 {% set name = "dask-core" %}
-{% set version = "2025.2.0" %}
+{% set version = "2025.5.1" %}
 
 package:
   name: {{ name }}
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/d/dask/dask-{{ version }}.tar.gz
-  sha256: 89c87125d04d28141eaccc4794164ce9098163fd22d8ad943db48f8d4c815460
+  url: https://pypi.org/packages/source/d/dask/dask-{{ version }}.tar.gz
+  sha256: 979d9536549de0e463f4cab8a8c66c3a2ef55791cd740d07d9bf58fab1d1076a
   entry_points:
     - dask = dask.__main__:main
 
@@ -23,7 +23,7 @@ requirements:
   host:
     - python
     - pip
-    - setuptools
+    - setuptools >=62.6
     - wheel
     - versioneer 0.29
     - tomli
@@ -37,18 +37,75 @@ requirements:
     - pyyaml >=5.3.1
     - toolz >=0.10.0
     - importlib-metadata >=4.13.0  # [py<312]
+  run_constrained:
+    - numpy >=1.24
+    - pandas >=2.0
+    - pyarrow >=14.0.1
+    - distributed =={{ version }}
+    - lz4 >=4.3.2
+    - bokeh >= 3.1.0
+    - jinja2 >= 2.10.3
+
+# AttributeError: 'Array' object has no attribute 'expr'
+{% set tests_to_skip = "test_blockwise or test_is_dask_collection_doesnt_materialize" %}
+# >       with pytest.raises(RuntimeWarning):
+# E       Failed: DID NOT RAISE <class 'RuntimeWarning'>
+{% set tests_to_skip = tests_to_skip + " or test_nanquantile_all_nan" %}
 
 test:
   imports:
     - dask
+    - dask.backends
+    - dask.bag
+    - dask.base
+    - dask.blockwise
+    - dask.bytes
+    - dask.bytes.core
+    - dask.bytes.utils
+    - dask.cache
+    - dask.callbacks
+    - dask.cli
+    - dask.config
+    - dask.context
+    - dask.core
+    - dask.dataframe
+    - dask.datasets
+    - dask.delayed
+    - dask.diagnostics
+    - dask.dot
+    - dask.graph_manipulation
+    - dask.hashing
+    - dask.highlevelgraph
+    - dask.layers
+    - dask.local
+    - dask.multiprocessing
+    - dask.optimization
+    - dask.order
+    - dask.rewrite
+    - dask.sizeof
+    - dask.system
+    - dask.tests.test_base
+    - dask.threaded
+    - dask.tokenize
+    - dask.typing
+    - dask.utils
+    - dask.utils_test
+    - dask.widgets
   requires:
     - pip
+    - pytest
+    - numpy
+    - pandas
+    - pyarrow
+    - pytest-mock
   commands:
     - pip check
+    - python -c "from importlib.metadata import version; assert(version('dask')=='{{ version }}')"
+    - pytest -k "not ({{ tests_to_skip }})" --pyargs dask
+    - dask -h
 
 #Note: The build and dependency order for dask-distributed packages are as follows.
 #      dask-core ---> dask-expr --->distributed --->dask
-
 about:
   home: https://www.dask.org/
   license: BSD-3-Clause
@@ -57,7 +114,7 @@ about:
   summary: Parallel Python with task scheduling
   description: |
     Dask is a flexible parallel computing library for analytics.
-  doc_url:  https://docs.dask.org
+  doc_url: https://docs.dask.org
   dev_url: https://github.com/dask/dask
 
 extra:
@@ -71,6 +128,3 @@ extra:
     - sinhrks
     - tomaugspurger
     - jrbourbeau
-  skip-lints:
-    - python_build_tool_in_run
-    - host_section_needs_exact_pinnings
