--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "dask-core" %}
-{% set version = "2025.2.0" %}
+{% set version = "2025.5.1" %}
 
 package:
   name: {{ name }}
@@ -7,13 +7,13 @@ package:
 
 source:
   url: https://pypi.io/packages/source/d/dask/dask-{{ version }}.tar.gz
-  sha256: 89c87125d04d28141eaccc4794164ce9098163fd22d8ad943db48f8d4c815460
-  entry_points:
-    - dask = dask.__main__:main
+  sha256: 979d9536549de0e463f4cab8a8c66c3a2ef55791cd740d07d9bf58fab1d1076a
 
 build:
   number: 0
   script: {{ PYTHON }} -m pip install . --no-deps --no-build-isolation -vv
+  entry_points:
+    - dask = dask.__main__:main
   skip: true  # [py<310]
 
 # Please note the repo used is the same as `dask`
@@ -23,10 +23,10 @@ requirements:
   host:
     - python
     - pip
-    - setuptools
     - wheel
+    - setuptools >=62.6
     - versioneer 0.29
-    - tomli
+    - toml
   run:
     - python
     - click >=8.1
@@ -37,20 +37,190 @@ requirements:
     - pyyaml >=5.3.1
     - toolz >=0.10.0
     - importlib-metadata >=4.13.0  # [py<312]
+  run_constrained:
+    # array
+    - numpy >=1.24
+    # dataframe
+    - pandas >=2.0
+    - pyarrow >=14.0.1
+    # diagnostics
+    - bokeh >=3.1.0
+    - jinja2 >=2.10.3
+    # complete
+    # - pyarrow >=14.0.1
+    - lz4 >= 4.3.2
 
 test:
+  source_files:
+    - conftest.py
   imports:
     - dask
-  requires:
-    - pip
+    - dask._collections
+    - dask._compatibility
+    - dask._dispatch
+    - dask._expr
+    - dask._task_spec
+    - dask._version
+    - dask.array
+    - dask.array._array_expr
+    - dask.array._array_expr._backends
+    - dask.array._array_expr._blockwise
+    - dask.array._array_expr._collection
+    - dask.array._array_expr._creation
+    - dask.array._array_expr._expr
+    - dask.array._array_expr._gufunc
+    - dask.array._array_expr._io
+    - dask.array._array_expr._map_blocks
+    - dask.array._array_expr._overlap
+    - dask.array._array_expr._rechunk
+    - dask.array._array_expr._reductions
+    - dask.array._array_expr._ufunc
+    - dask.array._array_expr._utils
+    - dask.array._shuffle
+    - dask.array.backends
+    - dask.array.blockwise
+    - dask.array.chunk
+    - dask.array.chunk_types
+    - dask.array.core
+    - dask.array.creation
+    - dask.array.dispatch
+    - dask.array.einsumfuncs
+    - dask.array.fft
+    - dask.array.gufunc
+    - dask.array.image
+    - dask.array.lib
+    - dask.array.linalg
+    - dask.array.numpy_compat
+    - dask.array.optimization
+    - dask.array.overlap
+    - dask.array.percentile
+    - dask.array.random
+    - dask.array.rechunk
+    - dask.array.reductions
+    - dask.array.reshape
+    - dask.array.routines
+    - dask.array.slicing
+    - dask.array.stats
+    - dask.array.svg
+    - dask.array.tests.test_dispatch
+    - dask.array.ufunc
+    - dask.array.utils
+    - dask.array.wrap
+    - dask.backends
+    - dask.bag
+    - dask.bag.avro
+    - dask.bag.core
+    - dask.bag.text
+    - dask.bag.utils
+    - dask.base
+    - dask.blockwise
+    - dask.bytes
+    - dask.bytes.core
+    - dask.bytes.utils
+    - dask.cache
+    - dask.callbacks
+    - dask.cli
+    - dask.config
+    - dask.context
+    - dask.core
+    - dask.dataframe
+    - dask.dataframe._compat
+    - dask.dataframe._dtypes
+    - dask.dataframe._pyarrow
+    - dask.dataframe._pyarrow_compat
+    - dask.dataframe.accessor
+    - dask.dataframe.backends
+    - dask.dataframe.categorical
+    - dask.dataframe.core
+    - dask.dataframe.dask_expr
+    - dask.dataframe.dask_expr._accessor
+    - dask.dataframe.dask_expr._backends
+    - dask.dataframe.dask_expr._categorical
+    - dask.dataframe.dask_expr._collection
+    - dask.dataframe.dask_expr._concat
+    - dask.dataframe.dask_expr._datetime
+    - dask.dataframe.dask_expr._describe
+    - dask.dataframe.dask_expr._dummies
+    - dask.dataframe.dask_expr._expr
+    - dask.dataframe.dask_expr._groupby
+    - dask.dataframe.dask_expr._merge
+    - dask.dataframe.dask_expr._quantile
+    - dask.dataframe.dask_expr._quantiles
+    - dask.dataframe.dask_expr._reductions
+    - dask.dataframe.dask_expr._repartition
+    - dask.dataframe.dask_expr._rolling
+    - dask.dataframe.dask_expr._shuffle
+    - dask.dataframe.dask_expr._str_accessor
+    - dask.dataframe.dask_expr._util
+    - dask.dataframe.dask_expr.datasets
+    - dask.dataframe.dask_expr.diagnostics._analyze
+    - dask.dataframe.dask_expr.diagnostics._explain
+    - dask.dataframe.dask_expr.io
+    - dask.dataframe.dispatch
+    - dask.dataframe.extensions
+    - dask.dataframe.groupby
+    - dask.dataframe.indexing
+    - dask.dataframe.io
+    - dask.dataframe.io.csv
+    - dask.dataframe.io.hdf
+    - dask.dataframe.io.io
+    - dask.dataframe.io.json
+    - dask.dataframe.io.orc.core
+    - dask.dataframe.io.orc.utils
+    - dask.dataframe.io.parquet.core
+    - dask.dataframe.io.parquet.utils
+    - dask.dataframe.io.sql
+    - dask.dataframe.io.utils
+    - dask.dataframe.methods
+    - dask.dataframe.multi
+    - dask.dataframe.partitionquantiles
+    - dask.dataframe.rolling
+    - dask.dataframe.shuffle
+    - dask.dataframe.utils
+    - dask.datasets
+    - dask.delayed
+    - dask.diagnostics
+    - dask.diagnostics.profile
+    - dask.diagnostics.profile_visualize
+    - dask.diagnostics.progress
+    - dask.dot
+    - dask.graph_manipulation
+    - dask.hashing
+    - dask.highlevelgraph
+    - dask.layers
+    - dask.local
+    - dask.multiprocessing
+    - dask.optimization
+    - dask.order
+    - dask.rewrite
+    - dask.sizeof
+    - dask.system
+    - dask.threaded
+    - dask.tokenize
+    - dask.typing
+    - dask.utils
+    - dask.utils_test
+    - dask.widgets
   commands:
     - pip check
+    - dask --help
+    - pytest --pyargs dask.tests
+  requires:
+    - pip
+    - pytest
+    - numpy >=1.24
+    - scipy
+    - pandas >=2.0
+    - pyarrow >=14.0.1
+    - bokeh >=3.1.0
+    - jinja2 >=2.10.3
+    - lz4 >= 4.3.2
 
 #Note: The build and dependency order for dask-distributed packages are as follows.
 #      dask-core ---> dask-expr --->distributed --->dask
 
 about:
-  home: https://www.dask.org/
+  home: https://www.dask.org
   license: BSD-3-Clause
   license_family: BSD
   license_file: LICENSE.txt
