--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,7 +24,7 @@ requirements:
     - wheel
     - setuptools >=62.6
     - versioneer 0.29
-    - toml
+    - tomli
   run:
     - python
     - click >=8.1
