--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "dask-core" %}
-{% set version = "2025.11.0" %}
+{% set version = "2025.12.0" %}
 
 package:
   name: {{ name }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.org/packages/source/{{ name[0] }}/{{ name.split('-')[0] }}/{{ name.split('-')[0] }}-{{ version }}.tar.gz
-  sha256: 23d59e624b80ee05b7cc8df858682cca58262c4c3b197ccf61da0f6543c8f7c3
+  sha256: 8d478f2aabd025e2453cf733ad64559de90cf328c20209e4574e9543707c3e1b
 
 build:
   number: 0
@@ -26,7 +26,7 @@ requirements:
     - setuptools >=80
     - versioneer 0.29
     - tomli
-    - setuptools-scm
+    - setuptools-scm >=9
   run:
     - python
     - click >=8.1
@@ -35,8 +35,16 @@ requirements:
     - packaging >=20.0
     - partd >=1.4.0
     - pyyaml >=5.3.1
-    - toolz >=0.10.0
+    - toolz >=0.12.0
     - importlib-metadata >=4.13.0  # [py<312]
+  run_constrained:
+    - numpy >=1.24
+    - pyarrow >=14.0.1
+    - lz4 >=4.3.2
+    - pandas >=2.0
+    - bokeh >=3.1.0
+    - jinja2 >=2.10.3
+    - distributed >=2025.12.0,<2025.12.1
 
 # Tests must be added in the dask recipe:
 # https://github.com/AnacondaRecipes/dask-feedstock/blob/master/recipe/meta.yaml
