--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -55,7 +55,8 @@ test:
     - pytest -v dask/tests -k "not (test_register_command_ep)"
 
 # Note: The build and dependency order for dask-distributed packages are as follows.
-# dask-core -> dask-expr -> distributed -> dask
+# dask-core -> @dask-expr@ -> distributed -> dask
+# dask-core removed from the host section inside the dask-expr. Please check future releases, it may be returned.
 about:
   home: https://github.com/dask/dask
   license: BSD-3-Clause
