--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: 23d59e624b80ee05b7cc8df858682cca58262c4c3b197ccf61da0f6543c8f7c3
 
 build:
-  number: 0
+  number: 1
   skip: true  # [py<310]
   script: {{ PYTHON }} -m pip install . --no-deps --no-build-isolation -vv
   entry_points:
@@ -24,9 +24,9 @@ requirements:
     - python
     - pip
     - setuptools >=80
-    - versioneer 0.29
     - tomli
-    - setuptools-scm
+    # https://github.com/dask/dask/issues/12182
+    - setuptools-scm >=9
   run:
     - python
     - click >=8.1
@@ -55,7 +55,8 @@ test:
     - pytest -v dask/tests -k "not (test_register_command_ep)"
 
 # Note: The build and dependency order for dask-distributed packages are as follows.
-# dask-core -> dask-expr -> distributed -> dask
+# dask-core -> @dask-expr@ -> distributed -> dask
+# dask-core removed from the host section inside the dask-expr. Please check future releases, it may be returned.
 about:
   home: https://github.com/dask/dask
   license: BSD-3-Clause
